# wasi-services-management

./: Cargo.toml  README.md
src/: main.rs  money.rs
